Tests/dsl/bad/parsing/UnitTestKO105noclassname.php
<?php

use Kaliop\eZMigrationBundle\API\MigrationInterface;
use Symfony\Component\DependencyInjection\ContainerInterface;

class noclassname implements MigrationInterface
{
    public static function execute(ContainerInterface $container)
    {
    }
}
